gcc/testsuite/rust/rustc/ui/parser/removed-syntax/removed-syntax-fn-sigil_dg.rs
fn main() {
    let x: fn~() = || (); // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
}

